@@ -1,5 +1,31 @@
 package org.broadinstitute.consent.http.service;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+import static org.mockito.MockitoAnnotations.openMocks;
+
+import java.sql.Timestamp;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.UUID;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import javax.ws.rs.BadRequestException;
+import javax.ws.rs.NotAcceptableException;
+import javax.ws.rs.NotAuthorizedException;
+import javax.ws.rs.NotFoundException;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.commons.lang3.RandomUtils;
 import org.broadinstitute.consent.http.db.DarCollectionDAO;
@@ -28,37 +54,10 @@ import org.broadinstitute.consent.http.models.User;
 import org.broadinstitute.consent.http.models.UserRole;
 import org.broadinstitute.consent.http.models.Vote;
 import org.broadinstitute.consent.http.service.dao.DarCollectionServiceDAO;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
-
-import javax.ws.rs.BadRequestException;
-import javax.ws.rs.NotAcceptableException;
-import javax.ws.rs.NotAuthorizedException;
-import javax.ws.rs.NotFoundException;
-import java.sql.Timestamp;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-import static org.mockito.MockitoAnnotations.openMocks;
 
 public class DarCollectionServiceTest {
 
@@ -85,7 +84,7 @@ public class DarCollectionServiceTest {
     @Mock
     private User user;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         openMocks(this);
     }
@@ -99,7 +98,7 @@ public class DarCollectionServiceTest {
         initService();
 
         List<DarCollection> collections = service.getCollectionsForUserByRoleName(user, UserRoles.ADMIN.getRoleName());
-        Assert.assertEquals(1, collections.size());
+        Assertions.assertEquals(1, collections.size());
     }
 
     @Test
@@ -117,7 +116,7 @@ public class DarCollectionServiceTest {
         initService();
 
         List<DarCollection> collections = service.getCollectionsForUserByRoleName(user, UserRoles.CHAIRPERSON.getRoleName());
-        Assert.assertEquals(1, collections.size());
+        Assertions.assertEquals(1, collections.size());
     }
 
     @Test
@@ -131,7 +130,7 @@ public class DarCollectionServiceTest {
         initService();
 
         List<DarCollection> collections = service.getCollectionsForUserByRoleName(user, UserRoles.SIGNINGOFFICIAL.getRoleName());
-        Assert.assertEquals(1, collections.size());
+        Assertions.assertEquals(1, collections.size());
     }
 
     @Test
@@ -144,7 +143,7 @@ public class DarCollectionServiceTest {
         initService();
 
         List<DarCollection> collections = service.getCollectionsForUserByRoleName(user, UserRoles.RESEARCHER.getRoleName());
-        Assert.assertEquals(1, collections.size());
+        Assertions.assertEquals(1, collections.size());
     }
 
     @Test
@@ -155,7 +154,7 @@ public class DarCollectionServiceTest {
         initService();
 
         List<DarCollection> collections = service.getCollectionsForUserByRoleName(user, null);
-        Assert.assertEquals(1, collections.size());
+        Assertions.assertEquals(1, collections.size());
     }
 
     @Test
@@ -172,7 +171,7 @@ public class DarCollectionServiceTest {
         initService();
 
         List<DarCollection> collections = service.getCollectionsForUserByRoleName(user, UserRoles.ADMIN.getRoleName());
-        Assert.assertEquals(0, collections.size());
+        Assertions.assertEquals(0, collections.size());
     }
 
     @Test
@@ -187,7 +186,7 @@ public class DarCollectionServiceTest {
         initService();
 
         List<DarCollection> collections = service.getCollectionsByUserDacs(user, false);
-        Assert.assertEquals(1, collections.size());
+        Assertions.assertEquals(1, collections.size());
     }
 
     @Test
@@ -199,7 +198,7 @@ public class DarCollectionServiceTest {
         initService();
 
         List<DarCollection> collections = service.getCollectionsByUserInstitution(user);
-        Assert.assertEquals(1, collections.size());
+        Assertions.assertEquals(1, collections.size());
     }
 
     @Test
@@ -227,15 +226,18 @@ public class DarCollectionServiceTest {
                             // Assert that the results sizes are correct
                             if (page == 8) {
                                 int lastPageSize = token.getFilteredCount() % token.getPageSize();
-                                Assert.assertEquals(lastPageSize, response.getResults().size());
+                                Assertions.assertEquals(lastPageSize, response.getResults().size());
                             } else {
-                                Assert.assertEquals((int) token.getPageSize(), response.getResults().size());
+                                Assertions.assertEquals((int) token.getPageSize(),
+                                    response.getResults().size());
                             }
 
                             // Assert that the returned results are what we expect them to be, based on ID
                             int expectedCollectionId = (page * token.getPageSize()) - token.getPageSize() + 1;
-                            Assert.assertEquals(Integer.valueOf(expectedCollectionId), response.getResults().get(0).getDarCollectionId());
-                            Assert.assertEquals(filteredCount, response.getFilteredCount().intValue());
+                            Assertions.assertEquals(Integer.valueOf(expectedCollectionId),
+                                response.getResults().get(0).getDarCollectionId());
+                            Assertions.assertEquals(filteredCount,
+                                response.getFilteredCount().intValue());
                         });
     }
 
@@ -248,9 +250,9 @@ public class DarCollectionServiceTest {
 
         PaginationResponse<DarCollection> response = service.queryCollectionsByFiltersAndUserRoles(user, token, UserRoles.ADMIN.getRoleName());
 
-        Assert.assertEquals(1, response.getFilteredPageCount().intValue());
-        Assert.assertEquals(0, response.getUnfilteredCount().intValue());
-        Assert.assertEquals(0, response.getFilteredCount().intValue());
+        Assertions.assertEquals(1, response.getFilteredPageCount().intValue());
+        Assertions.assertEquals(0, response.getUnfilteredCount().intValue());
+        Assertions.assertEquals(0, response.getFilteredCount().intValue());
     }
 
     @Test
@@ -264,9 +266,9 @@ public class DarCollectionServiceTest {
         when(darCollectionDAO.getFilteredCollectionsForAdmin(anyString(), anyString(), anyString())).thenReturn(mockCollections);
         initService();
         PaginationResponse<DarCollection> response = service.queryCollectionsByFiltersAndUserRoles(user, token, UserRoles.ADMIN.getRoleName());
-        Assert.assertEquals(1, response.getFilteredPageCount().intValue());
-        Assert.assertEquals(filteredCount, response.getResults().size());
-        Assert.assertEquals(filteredCount, response.getFilteredCount().intValue());
+        Assertions.assertEquals(1, response.getFilteredPageCount().intValue());
+        Assertions.assertEquals(filteredCount, response.getResults().size());
+        Assertions.assertEquals(filteredCount, response.getFilteredCount().intValue());
     }
 
     @Test
@@ -279,7 +281,7 @@ public class DarCollectionServiceTest {
         // Start index will be > end index in this case since we're trying to get results 11-20 when
         // there are only 5 items in the results array, so there should be 0 results returned
         PaginationResponse<DarCollection> response = service.queryCollectionsByFiltersAndUserRoles(user, token, UserRoles.ADMIN.getRoleName());
-        Assert.assertTrue(response.getResults().isEmpty());
+        Assertions.assertTrue(response.getResults().isEmpty());
     }
 
     @Test
@@ -297,17 +299,17 @@ public class DarCollectionServiceTest {
         initService();
 
         collections = service.addDatasetsToCollections(collections, List.of());
-        Assert.assertEquals(1, collections.size());
+        Assertions.assertEquals(1, collections.size());
 
         DarCollection collection = collections.get(0);
         Set<Dataset> datasetsFromCollection = collection.getDatasets();
-        Assert.assertEquals(datasetIds.size(), datasetsFromCollection.size());
+        Assertions.assertEquals(datasetIds.size(), datasetsFromCollection.size());
 
         List<Integer> collectionDatasetIds = datasetsFromCollection.stream()
                 .map(Dataset::getDataSetId)
                 .sorted()
                 .collect(Collectors.toList());
-        Assert.assertEquals(datasetIds, collectionDatasetIds);
+        Assertions.assertEquals(datasetIds, collectionDatasetIds);
     }
 
     @Test
@@ -331,17 +333,17 @@ public class DarCollectionServiceTest {
         initService();
 
         collections = service.addDatasetsToCollections(collections, List.of(dataset.getDataSetId()));
-        Assert.assertEquals(1, collections.size());
+        Assertions.assertEquals(1, collections.size());
 
         DarCollection collection = collections.get(0);
         Set<Dataset> datasetsFromCollection = collection.getDatasets();
-        Assert.assertEquals(1, datasetsFromCollection.size());
+        Assertions.assertEquals(1, datasetsFromCollection.size());
 
         List<Integer> collectionDatasetIds = datasetsFromCollection.stream()
                 .map(Dataset::getDataSetId)
                 .sorted()
-                .collect(Collectors.toList());
-        Assert.assertEquals(dataset.getDataSetId(), collectionDatasetIds.get(0));
+                .toList();
+        Assertions.assertEquals(dataset.getDataSetId(), collectionDatasetIds.get(0));
     }
 
     @Test
@@ -357,11 +359,11 @@ public class DarCollectionServiceTest {
 
         DarCollection canceledCollection = service.cancelDarCollectionAsResearcher(collection);
         for (DataAccessRequest collectionDar : canceledCollection.getDars().values()) {
-            Assert.assertEquals("canceled", collectionDar.getData().getStatus().toLowerCase());
+            Assertions.assertEquals("canceled", collectionDar.getData().getStatus().toLowerCase());
         }
     }
 
-    @Test(expected = BadRequestException.class)
+    @Test
     public void testCancelDarCollection_electionPresent() {
         Set<Dataset> datasets = new HashSet<>();
         DarCollection collection = generateMockDarCollection(datasets);
@@ -371,7 +373,11 @@ public class DarCollectionServiceTest {
         when(darCollectionDAO.findDARCollectionByCollectionId(any())).thenReturn(collection);
         initService();
 
-        service.cancelDarCollectionAsResearcher(collection);
+        try {
+            service.cancelDarCollectionAsResearcher(collection);
+        } catch (Exception e) {
+            Assertions.assertTrue(e instanceof BadRequestException);
+        }
     }
 
     @Test
@@ -396,7 +402,7 @@ public class DarCollectionServiceTest {
         verify(darCollectionDAO, times(1)).findDARCollectionByCollectionId(anyInt());
     }
 
-    @Test(expected = BadRequestException.class)
+    @Test
     public void testCancelDarCollectionAsResearcher_WithElections() {
         DataAccessRequest dar = new DataAccessRequest();
         dar.setReferenceId(UUID.randomUUID().toString());
@@ -411,7 +417,11 @@ public class DarCollectionServiceTest {
         when(electionDAO.findLastElectionsByReferenceIds(anyList())).thenReturn(List.of(election));
         initService();
 
-        service.cancelDarCollectionAsResearcher(collection);
+        try {
+            service.cancelDarCollectionAsResearcher(collection);
+        } catch (Exception e) {
+            Assertions.assertTrue(e instanceof BadRequestException);
+        }
     }
 
     @Test
@@ -548,11 +558,11 @@ public class DarCollectionServiceTest {
         initService();
 
         PaginationResponse<DarCollection> collectionResponse = service.queryCollectionsByFiltersAndUserRoles(user, token, adminName);
-        Assert.assertNotNull(collectionResponse);
+        Assertions.assertNotNull(collectionResponse);
         int responseUnfilteredCount = collectionResponse.getUnfilteredCount();
-        Assert.assertEquals(unfilteredCount, responseUnfilteredCount);
-        Assert.assertEquals(mockCollectionSize, (int) collectionResponse.getFilteredCount());
-        Assert.assertEquals(1, (int) collectionResponse.getFilteredPageCount());
+        Assertions.assertEquals(unfilteredCount, responseUnfilteredCount);
+        Assertions.assertEquals(mockCollectionSize, (int) collectionResponse.getFilteredCount());
+        Assertions.assertEquals(1, (int) collectionResponse.getFilteredPageCount());
     }
 
     @Test
@@ -572,7 +582,7 @@ public class DarCollectionServiceTest {
         when(darCollectionDAO.getFilteredCollectionsForSigningOfficial(anyString(), anyString(), anyInt(), anyString())).thenReturn(mockCollection);
         initService();
         PaginationResponse<DarCollection> collectionResponse = service.queryCollectionsByFiltersAndUserRoles(user, token, soName);
-        Assert.assertNotNull(collectionResponse);
+        Assertions.assertNotNull(collectionResponse);
         queryCollectionsAssertions(collectionResponse, unfilteredCount, mockCollectionSize);
     }
 
@@ -592,12 +602,12 @@ public class DarCollectionServiceTest {
         when(darCollectionDAO.getFilteredCollectionsForDACByCollectionIds(anyString(), anyString(), anyList(), anyString())).thenReturn(mockCollection);
         initService();
         PaginationResponse<DarCollection> response = service.queryCollectionsByFiltersAndUserRoles(user, token, dacRoleName);
-        Assert.assertNotNull(response);
-        Assert.assertEquals(dacIds.size(), (int) response.getUnfilteredCount());
-        Assert.assertEquals(3, (int) response.getFilteredCount());
-        Assert.assertEquals(1, (int) response.getFilteredPageCount());
+        Assertions.assertNotNull(response);
+        Assertions.assertEquals(dacIds.size(), (int) response.getUnfilteredCount());
+        Assertions.assertEquals(3, (int) response.getFilteredCount());
+        Assertions.assertEquals(1, (int) response.getFilteredPageCount());
         List<DarCollection> results = response.getResults();
-        Assert.assertEquals(mockCollectionSize, results.size());
+        Assertions.assertEquals(mockCollectionSize, results.size());
     }
 
     @Test
@@ -616,10 +626,10 @@ public class DarCollectionServiceTest {
         when(darCollectionDAO.getFilteredCollectionsForDACByCollectionIds(anyString(), anyString(), anyList(), anyString())).thenReturn(mockCollection);
         initService();
         PaginationResponse<DarCollection> response = service.queryCollectionsByFiltersAndUserRoles(user, token, dacRoleName);
-        Assert.assertNotNull(response);
-        Assert.assertEquals(dacIds.size(), (int) response.getUnfilteredCount());
-        Assert.assertEquals(3, (int) response.getFilteredCount());
-        Assert.assertEquals(1, (int) response.getFilteredPageCount());
+        Assertions.assertNotNull(response);
+        Assertions.assertEquals(dacIds.size(), (int) response.getUnfilteredCount());
+        Assertions.assertEquals(3, (int) response.getFilteredCount());
+        Assertions.assertEquals(1, (int) response.getFilteredPageCount());
     }
 
     @Test
@@ -640,10 +650,10 @@ public class DarCollectionServiceTest {
         initService();
         PaginationResponse<DarCollection> response = service.queryCollectionsByFiltersAndUserRoles(user, token,
                 dacRoleName);
-        Assert.assertNotNull(response);
-        Assert.assertEquals(mockCollectionSize, (int) response.getUnfilteredCount());
-        Assert.assertEquals(3, (int) response.getFilteredCount());
-        Assert.assertEquals(1, (int) response.getFilteredPageCount());
+        Assertions.assertNotNull(response);
+        Assertions.assertEquals(mockCollectionSize, (int) response.getUnfilteredCount());
+        Assertions.assertEquals(3, (int) response.getFilteredCount());
+        Assertions.assertEquals(1, (int) response.getFilteredPageCount());
     }
 
     @Test
@@ -685,7 +695,7 @@ public class DarCollectionServiceTest {
 
     }
 
-    @Test(expected = NotAcceptableException.class)
+    @Test
     public void testDeleteAsResearcherWithElections() {
         User user = new User();
         user.setUserId(1);
@@ -709,7 +719,11 @@ public class DarCollectionServiceTest {
         Integer collectionId = collection.getDarCollectionId();
 
         initService();
-        service.deleteByCollectionId(user, collectionId);
+        try {
+            service.deleteByCollectionId(user, collectionId);
+        } catch (Exception ex) {
+            Assertions.assertTrue(ex instanceof NotAcceptableException);
+        }
     }
 
     @Test
@@ -751,7 +765,7 @@ public class DarCollectionServiceTest {
     }
 
 
-    @Test(expected = NotAuthorizedException.class)
+    @Test
     public void testDeleteAsUser() {
         User user = new User();
         user.setUserId(1);
@@ -767,10 +781,14 @@ public class DarCollectionServiceTest {
         when(electionDAO.findElectionsByReferenceIds(any())).thenReturn(new ArrayList<>());
 
         initService();
-        service.deleteByCollectionId(user, collectionId);
+        try {
+            service.deleteByCollectionId(user, collectionId);
+        } catch (Exception e) {
+            Assertions.assertTrue(e instanceof NotAuthorizedException);
+        }
     }
 
-    @Test(expected = NotFoundException.class)
+    @Test
     public void testDeleteButNoCollection() {
         User user = new User();
         user.setUserId(1);
@@ -786,7 +804,11 @@ public class DarCollectionServiceTest {
         when(electionDAO.findElectionsByReferenceIds(any())).thenReturn(new ArrayList<>());
 
         initService();
-        service.deleteByCollectionId(user, collectionId);
+        try {
+            service.deleteByCollectionId(user, collectionId);
+        } catch (Exception e) {
+            Assertions.assertTrue(e instanceof NotFoundException);
+        }
     }
 
     @Test
@@ -805,10 +827,11 @@ public class DarCollectionServiceTest {
         initService();
 
         List<DarCollectionSummary> summaries = service.getSummariesForRoleName(user, UserRoles.SIGNINGOFFICIAL.getRoleName());
-        Assert.assertNotNull(summaries);
-        Assert.assertEquals(1, summaries.size());
+        Assertions.assertNotNull(summaries);
+        Assertions.assertEquals(1, summaries.size());
         DarCollectionSummary s = summaries.get(0);
-        Assert.assertTrue(s.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertTrue(
+            s.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
     }
 
     @Test
@@ -835,10 +858,11 @@ public class DarCollectionServiceTest {
 
         List<DarCollectionSummary> summaries = service.getSummariesForRoleName(user,
                 UserRoles.SIGNINGOFFICIAL.getRoleName());
-        Assert.assertNotNull(summaries);
-        Assert.assertEquals(1, summaries.size());
+        Assertions.assertNotNull(summaries);
+        Assertions.assertEquals(1, summaries.size());
         DarCollectionSummary s = summaries.get(0);
-        Assert.assertTrue(s.getStatus().equalsIgnoreCase(DarCollectionStatus.COMPLETE.getValue()));
+        Assertions.assertTrue(
+            s.getStatus().equalsIgnoreCase(DarCollectionStatus.COMPLETE.getValue()));
     }
 
     @Test
@@ -857,10 +881,11 @@ public class DarCollectionServiceTest {
 
         List<DarCollectionSummary> summaries = service.getSummariesForRoleName(user,
                 UserRoles.SIGNINGOFFICIAL.getRoleName());
-        Assert.assertNotNull(summaries);
-        Assert.assertEquals(1, summaries.size());
+        Assertions.assertNotNull(summaries);
+        Assertions.assertEquals(1, summaries.size());
         DarCollectionSummary s = summaries.get(0);
-        Assert.assertTrue(s.getStatus().equalsIgnoreCase(DarCollectionStatus.UNREVIEWED.getValue()));
+        Assertions.assertTrue(
+            s.getStatus().equalsIgnoreCase(DarCollectionStatus.UNREVIEWED.getValue()));
     }
 
     @Test
@@ -918,37 +943,41 @@ public class DarCollectionServiceTest {
 
         List<DarCollectionSummary> summaries = service.getSummariesForRoleName(user,
                 UserRoles.RESEARCHER.getRoleName());
-        Assert.assertNotNull(summaries);
-        Assert.assertEquals(4, summaries.size());
+        Assertions.assertNotNull(summaries);
+        Assertions.assertEquals(4, summaries.size());
 
         DarCollectionSummary testOne = summaries.get(0);
         Set<String> expectedOneActions = Set.of(
                 DarCollectionActions.REVIEW.getValue()
         );
-        Assert.assertTrue(testOne.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(testOne.getActions(), expectedOneActions);
+        Assertions.assertTrue(
+            testOne.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(testOne.getActions(), expectedOneActions);
 
         DarCollectionSummary testTwo = summaries.get(1);
         Set<String> expectedTwoActions = Set.of(
                 DarCollectionActions.REVIEW.getValue(),
                 DarCollectionActions.CANCEL.getValue()
         );
-        Assert.assertTrue(testTwo.getStatus().equalsIgnoreCase(DarCollectionStatus.UNREVIEWED.getValue()));
-        Assert.assertEquals(testTwo.getActions(), expectedTwoActions);
+        Assertions.assertTrue(
+            testTwo.getStatus().equalsIgnoreCase(DarCollectionStatus.UNREVIEWED.getValue()));
+        Assertions.assertEquals(testTwo.getActions(), expectedTwoActions);
 
         DarCollectionSummary testThree = summaries.get(2);
         Set<String> expectedThreeActions = Set.of(
                 DarCollectionActions.REVIEW.getValue(),
                 DarCollectionActions.REVISE.getValue());
-        Assert.assertTrue(testThree.getStatus().equalsIgnoreCase(DarCollectionStatus.CANCELED.getValue()));
-        Assert.assertEquals(testThree.getActions(), expectedThreeActions);
+        Assertions.assertTrue(
+            testThree.getStatus().equalsIgnoreCase(DarCollectionStatus.CANCELED.getValue()));
+        Assertions.assertEquals(testThree.getActions(), expectedThreeActions);
 
         DarCollectionSummary testDraft = summaries.get(3);
         Set<String> expectedDraftActions = Set.of(
                 DarCollectionActions.RESUME.getValue(),
                 DarCollectionActions.DELETE.getValue());
-        Assert.assertTrue(testDraft.getStatus().equalsIgnoreCase(DarCollectionStatus.DRAFT.getValue()));
-        Assert.assertEquals(testDraft.getActions(), expectedDraftActions);
+        Assertions.assertTrue(
+            testDraft.getStatus().equalsIgnoreCase(DarCollectionStatus.DRAFT.getValue()));
+        Assertions.assertEquals(testDraft.getActions(), expectedDraftActions);
     }
 
     @Test
@@ -1020,27 +1049,31 @@ public class DarCollectionServiceTest {
         DarCollectionSummary testOne = summaries.get(0);
         Set<String> expectedOneActions = Set.of(
                 DarCollectionActions.CANCEL.getValue());
-        Assert.assertTrue(testOne.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(testOne.getActions(), expectedOneActions);
+        Assertions.assertTrue(
+            testOne.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(testOne.getActions(), expectedOneActions);
 
         DarCollectionSummary testTwo = summaries.get(1);
         Set<String> expectedTwoActions = Set.of(
                 DarCollectionActions.CANCEL.getValue(),
                 DarCollectionActions.OPEN.getValue());
-        Assert.assertTrue(testTwo.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(testTwo.getActions(), expectedTwoActions);
+        Assertions.assertTrue(
+            testTwo.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(testTwo.getActions(), expectedTwoActions);
 
         DarCollectionSummary testThree = summaries.get(2);
         Set<String> expectedThreeActions = Set.of(
                 DarCollectionActions.OPEN.getValue());
-        Assert.assertTrue(testThree.getStatus().equalsIgnoreCase(DarCollectionStatus.COMPLETE.getValue()));
-        Assert.assertEquals(testThree.getActions(), expectedThreeActions);
+        Assertions.assertTrue(
+            testThree.getStatus().equalsIgnoreCase(DarCollectionStatus.COMPLETE.getValue()));
+        Assertions.assertEquals(testThree.getActions(), expectedThreeActions);
 
         DarCollectionSummary testFour = summaries.get(3);
         Set<String> expectedFourActions = Set.of(
                 DarCollectionActions.OPEN.getValue());
-        Assert.assertTrue(testFour.getStatus().equalsIgnoreCase(DarCollectionStatus.UNREVIEWED.getValue()));
-        Assert.assertEquals(testFour.getActions(), expectedFourActions);
+        Assertions.assertTrue(
+            testFour.getStatus().equalsIgnoreCase(DarCollectionStatus.UNREVIEWED.getValue()));
+        Assertions.assertEquals(testFour.getActions(), expectedFourActions);
     }
 
     @Test
@@ -1098,28 +1131,28 @@ public class DarCollectionServiceTest {
 
         List<DarCollectionSummary> summaries = service.getSummariesForRoleName(user, UserRoles.MEMBER.getRoleName());
 
-        Assert.assertNotNull(summaries);
-        Assert.assertEquals(4, summaries.size());
+        Assertions.assertNotNull(summaries);
+        Assertions.assertEquals(4, summaries.size());
 
         DarCollectionSummary testOne = summaries.get(0);
         Set<String> expectedOneActions = Set.of();
-        Assert.assertEquals(testOne.getActions(), expectedOneActions);
-        Assert.assertEquals(DarCollectionStatus.COMPLETE.getValue(), testOne.getStatus());
+        Assertions.assertEquals(testOne.getActions(), expectedOneActions);
+        Assertions.assertEquals(DarCollectionStatus.COMPLETE.getValue(), testOne.getStatus());
 
         DarCollectionSummary testTwo = summaries.get(1);
         Set<String> expectedTwoActions = Set.of(DarCollectionActions.UPDATE.getValue());
-        Assert.assertEquals(testTwo.getActions(), expectedTwoActions);
-        Assert.assertEquals(DarCollectionStatus.IN_PROCESS.getValue(), testTwo.getStatus());
+        Assertions.assertEquals(testTwo.getActions(), expectedTwoActions);
+        Assertions.assertEquals(DarCollectionStatus.IN_PROCESS.getValue(), testTwo.getStatus());
 
         DarCollectionSummary testThree = summaries.get(2);
         Set<String> expectedThreeActions = Set.of();
-        Assert.assertEquals(testThree.getActions(), expectedThreeActions);
-        Assert.assertEquals(DarCollectionStatus.UNREVIEWED.getValue(), testThree.getStatus());
+        Assertions.assertEquals(testThree.getActions(), expectedThreeActions);
+        Assertions.assertEquals(DarCollectionStatus.UNREVIEWED.getValue(), testThree.getStatus());
 
         DarCollectionSummary testFour = summaries.get(3);
         Set<String> expectedFourActions = Set.of(DarCollectionActions.VOTE.getValue());
-        Assert.assertEquals(testFour.getActions(), expectedFourActions);
-        Assert.assertEquals(DarCollectionStatus.IN_PROCESS.getValue(), testFour.getStatus());
+        Assertions.assertEquals(testFour.getActions(), expectedFourActions);
+        Assertions.assertEquals(DarCollectionStatus.IN_PROCESS.getValue(), testFour.getStatus());
     }
 
     @Test
@@ -1215,49 +1248,55 @@ public class DarCollectionServiceTest {
         initService();
 
         List<DarCollectionSummary> summaries = service.getSummariesForRoleName(user, UserRoles.CHAIRPERSON.getRoleName());
-        Assert.assertEquals(6, summaries.size());
+        Assertions.assertEquals(6, summaries.size());
 
         DarCollectionSummary testOne = summaries.get(0);
         Set<String> expectedOneActions = Set.of(
                 DarCollectionActions.VOTE.getValue(),
                 DarCollectionActions.CANCEL.getValue());
-        Assert.assertTrue(testOne.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(testOne.getActions(), expectedOneActions);
+        Assertions.assertTrue(
+            testOne.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(testOne.getActions(), expectedOneActions);
 
         DarCollectionSummary testTwo = summaries.get(1);
         Set<String> expectedTwoActions = Set.of(
                 DarCollectionActions.VOTE.getValue(),
                 DarCollectionActions.CANCEL.getValue(),
                 DarCollectionActions.OPEN.getValue());
-        Assert.assertTrue(testTwo.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(testTwo.getActions(), expectedTwoActions);
+        Assertions.assertTrue(
+            testTwo.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(testTwo.getActions(), expectedTwoActions);
 
         DarCollectionSummary testThree = summaries.get(2);
         Set<String> expectedThreeActions = Set.of(
                 DarCollectionActions.OPEN.getValue());
-        Assert.assertTrue(testThree.getStatus().equalsIgnoreCase(DarCollectionStatus.COMPLETE.getValue()));
-        Assert.assertEquals(testThree.getActions(), expectedThreeActions);
+        Assertions.assertTrue(
+            testThree.getStatus().equalsIgnoreCase(DarCollectionStatus.COMPLETE.getValue()));
+        Assertions.assertEquals(testThree.getActions(), expectedThreeActions);
 
         DarCollectionSummary testFour = summaries.get(3);
         Set<String> expectedFourActions = Set.of(
                 DarCollectionActions.OPEN.getValue());
-        Assert.assertTrue(testFour.getStatus().equalsIgnoreCase(DarCollectionStatus.UNREVIEWED.getValue()));
-        Assert.assertEquals(testFour.getActions(), expectedFourActions);
+        Assertions.assertTrue(
+            testFour.getStatus().equalsIgnoreCase(DarCollectionStatus.UNREVIEWED.getValue()));
+        Assertions.assertEquals(testFour.getActions(), expectedFourActions);
 
         DarCollectionSummary testFive = summaries.get(4);
         Set<String> expectedFiveActions = Set.of(
                 DarCollectionActions.OPEN.getValue(),
                 DarCollectionActions.VOTE.getValue()
         );
-        Assert.assertTrue(testFive.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(testFive.getActions(), expectedFiveActions);
+        Assertions.assertTrue(
+            testFive.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(testFive.getActions(), expectedFiveActions);
 
         DarCollectionSummary testSix = summaries.get(5);
         Set<String> expectedSixActions = Set.of(
                 DarCollectionActions.OPEN.getValue()
         );
-        Assert.assertTrue(testSix.getStatus().equalsIgnoreCase(DarCollectionStatus.COMPLETE.getValue()));
-        Assert.assertEquals(testSix.getActions(), expectedSixActions);
+        Assertions.assertTrue(
+            testSix.getStatus().equalsIgnoreCase(DarCollectionStatus.COMPLETE.getValue()));
+        Assertions.assertEquals(testSix.getActions(), expectedSixActions);
 
     }
 
@@ -1289,10 +1328,11 @@ public class DarCollectionServiceTest {
         initService();
 
         DarCollectionSummary summaryResult = service.getSummaryForRoleNameByCollectionId(user, UserRoles.SIGNINGOFFICIAL.getRoleName(), collectionId);
-        Assert.assertNotNull(summaryResult);
+        Assertions.assertNotNull(summaryResult);
 
-        Assert.assertTrue(summaryResult.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(Set.of(), summaryResult.getActions());
+        Assertions.assertTrue(
+            summaryResult.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(Set.of(), summaryResult.getActions());
     }
 
     @Test
@@ -1323,12 +1363,13 @@ public class DarCollectionServiceTest {
         initService();
 
         DarCollectionSummary summaryResult = service.getSummaryForRoleNameByCollectionId(user, UserRoles.RESEARCHER.getRoleName(), collectionId);
-        Assert.assertNotNull(summaryResult);
+        Assertions.assertNotNull(summaryResult);
 
         Set<String> expectedActions = Set.of(
                 DarCollectionActions.REVIEW.getValue());
-        Assert.assertTrue(summaryResult.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(expectedActions, summaryResult.getActions());
+        Assertions.assertTrue(
+            summaryResult.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(expectedActions, summaryResult.getActions());
     }
 
     @Test
@@ -1359,13 +1400,14 @@ public class DarCollectionServiceTest {
         initService();
 
         DarCollectionSummary summaryResult = service.getSummaryForRoleNameByCollectionId(user, UserRoles.ADMIN.getRoleName(), collectionId);
-        Assert.assertNotNull(summaryResult);
+        Assertions.assertNotNull(summaryResult);
 
         Set<String> expectedActions = Set.of(
                 DarCollectionActions.CANCEL.getValue(),
                 DarCollectionActions.OPEN.getValue());
-        Assert.assertTrue(summaryResult.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(expectedActions, summaryResult.getActions());
+        Assertions.assertTrue(
+            summaryResult.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(expectedActions, summaryResult.getActions());
     }
 
     @Test
@@ -1398,14 +1440,15 @@ public class DarCollectionServiceTest {
         initService();
 
         DarCollectionSummary summaryResult = service.getSummaryForRoleNameByCollectionId(user, UserRoles.CHAIRPERSON.getRoleName(), collectionId);
-        Assert.assertNotNull(summaryResult);
+        Assertions.assertNotNull(summaryResult);
 
         Set<String> expectedActions = Set.of(
                 DarCollectionActions.VOTE.getValue(),
                 DarCollectionActions.CANCEL.getValue(),
                 DarCollectionActions.OPEN.getValue());
-        Assert.assertTrue(summaryResult.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(expectedActions, summaryResult.getActions());
+        Assertions.assertTrue(
+            summaryResult.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(expectedActions, summaryResult.getActions());
     }
 
     @Test
@@ -1440,15 +1483,16 @@ public class DarCollectionServiceTest {
         initService();
 
         DarCollectionSummary summaryResult = service.getSummaryForRoleNameByCollectionId(user, UserRoles.MEMBER.getRoleName(), collectionId);
-        Assert.assertNotNull(summaryResult);
+        Assertions.assertNotNull(summaryResult);
 
         Set<String> expectedActions = Set.of(
                 DarCollectionActions.VOTE.getValue());
-        Assert.assertTrue(summaryResult.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-        Assert.assertEquals(expectedActions, summaryResult.getActions());
+        Assertions.assertTrue(
+            summaryResult.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
+        Assertions.assertEquals(expectedActions, summaryResult.getActions());
     }
 
-    @Test(expected = NotFoundException.class)
+    @Test
     public void testGetSummaryForRoleNameByCollectionId_NoSummaryFound() {
         User user = new User();
         user.setUserId(1);
@@ -1460,15 +1504,19 @@ public class DarCollectionServiceTest {
                 .thenReturn(null);
         initService();
 
-        service.getSummaryForRoleNameByCollectionId(user, UserRoles.RESEARCHER.getRoleName(), collectionId);
+        try {
+            service.getSummaryForRoleNameByCollectionId(user, UserRoles.RESEARCHER.getRoleName(), collectionId);
+        } catch (Exception e) {
+            Assertions.assertTrue(e instanceof NotFoundException);
+        }
     }
 
     private void queryCollectionsAssertions(PaginationResponse<DarCollection> response, int expectedUnfilteredCount, int expectedFilteredCount) {
-        Assert.assertEquals(expectedUnfilteredCount, (int) response.getUnfilteredCount());
-        Assert.assertEquals(expectedFilteredCount, (int) response.getFilteredCount());
-        Assert.assertEquals(1, (int) response.getFilteredPageCount());
+        Assertions.assertEquals(expectedUnfilteredCount, (int) response.getUnfilteredCount());
+        Assertions.assertEquals(expectedFilteredCount, (int) response.getFilteredCount());
+        Assertions.assertEquals(1, (int) response.getFilteredPageCount());
         List<DarCollection> results = response.getResults();
-        Assert.assertEquals(expectedFilteredCount, results.size());
+        Assertions.assertEquals(expectedFilteredCount, results.size());
     }
 
     private PaginationToken initPaginationToken(String sortField, String sortOrder, String filterTerm, int pageSize) {
