@@ -1,5 +1,19 @@
 package org.broadinstitute.consent.http.service;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.notNull;
+import static org.mockito.Mockito.when;
+import static org.mockito.MockitoAnnotations.openMocks;
+
+import java.sql.BatchUpdateException;
+import java.util.Arrays;
+import java.util.Date;
+import java.util.HashSet;
+import java.util.List;
+import javax.ws.rs.BadRequestException;
+import javax.ws.rs.NotFoundException;
 import org.broadinstitute.consent.http.db.DatasetAssociationDAO;
 import org.broadinstitute.consent.http.db.DatasetDAO;
 import org.broadinstitute.consent.http.db.UserDAO;
@@ -8,26 +22,12 @@ import org.broadinstitute.consent.http.models.Dataset;
 import org.broadinstitute.consent.http.models.DatasetAssociation;
 import org.broadinstitute.consent.http.models.User;
 import org.broadinstitute.consent.http.models.UserRole;
-import org.junit.Before;
 import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.rules.ExpectedException;
 import org.mockito.Mock;
-
-import javax.ws.rs.BadRequestException;
-import javax.ws.rs.NotFoundException;
-import java.sql.BatchUpdateException;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.HashSet;
-import java.util.List;
-
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doAnswer;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.notNull;
-import static org.mockito.Mockito.when;
-import static org.mockito.MockitoAnnotations.openMocks;
 
 public class DatasetAssociationServiceTest {
 
@@ -46,7 +46,7 @@ public class DatasetAssociationServiceTest {
     public ExpectedException thrown = ExpectedException.none();
 
 
-    @Before
+    @BeforeEach
     public void setUp() {
         openMocks(this);
         service = new DatasetAssociationService(dsAssociationDAO, userDAO, dsDAO, userRoleDAO);
@@ -61,7 +61,7 @@ public class DatasetAssociationServiceTest {
     }
 
     @Test
-    public void testGetAndVerifyUsersInvalidUsersList() throws Exception {
+    public void testGetAndVerifyUsersInvalidUsersList() {
         when(userDAO.findUsersWithRoles(notNull())).thenReturn(new HashSet<>(Arrays.asList(member, chairperson)));
         thrown.expect(BadRequestException.class);
         thrown.expectMessage("Invalid UserId list.");
@@ -69,7 +69,7 @@ public class DatasetAssociationServiceTest {
     }
 
     @Test
-    public void testCreateDatasetUsersAssociation() throws Exception {
+    public void testCreateDatasetUsersAssociation() {
         when(userDAO.findUsersWithRoles(notNull())).thenReturn(new HashSet<>(Arrays.asList(dataOwner1, dataOwner2)));
         when(dsDAO.findDatasetById(1)).thenReturn(ds1);
         when(dsAssociationDAO.getDatasetAssociation(1)).thenReturn(Arrays.asList(dsAssociation1, dsAssociation2));
@@ -77,7 +77,7 @@ public class DatasetAssociationServiceTest {
     }
 
     @Test
-    public void testCreateDatasetUsersAssociationNotFoundException() throws Exception {
+    public void testCreateDatasetUsersAssociationNotFoundException() {
         when(userDAO.findUsersWithRoles(notNull())).thenReturn(new HashSet<>(Arrays.asList(dataOwner1, dataOwner2)));
         when(dsDAO.findDatasetById(1)).thenReturn(null);
         thrown.expect(NotFoundException.class);
@@ -85,15 +85,19 @@ public class DatasetAssociationServiceTest {
         service.createDatasetUsersAssociation(1, Arrays.asList(1, 2));
     }
 
-    @Test(expected = BatchUpdateException.class)
-    public void testCreateDatasetUsersAssociationBadRequestException() throws Exception {
+    @Test
+    public void testCreateDatasetUsersAssociationBadRequestException() {
         when(userDAO.findUsersWithRoles(notNull())).thenReturn(new HashSet<>(Arrays.asList(dataOwner1, dataOwner2)));
         when(dsDAO.findDatasetById(1)).thenReturn(ds1);
 
         doAnswer(invocationOnMock -> {
             throw new BatchUpdateException();
         }).when(dsAssociationDAO).insertDatasetUserAssociation(any());
-        service.createDatasetUsersAssociation(1, Arrays.asList(1, 2));
+        try {
+            service.createDatasetUsersAssociation(1, Arrays.asList(1, 2));
+        } catch (Exception e) {
+            Assertions.assertTrue(e instanceof BatchUpdateException);
+        }
     }
 
 
@@ -116,15 +120,15 @@ public class DatasetAssociationServiceTest {
     User dataOwner2 = new User(4, "originalchair@broad.com", "Original Chairperson", new Date(), dataownerList());
 
     private List<UserRole> chairpersonList() {
-        return Arrays.asList(getChairpersonRole());
+        return List.of(getChairpersonRole());
     }
 
     private List<UserRole> memberList() {
-        return Arrays.asList(getMemberRole());
+        return List.of(getMemberRole());
     }
 
     private List<UserRole> dataownerList() {
-        return Arrays.asList(getDataOwnerRole());
+        return List.of(getDataOwnerRole());
     }
 
     private UserRole getMemberRole() {
